--- a/stylesSCSS/blocks/_main-page-header-content.scss
+++ b/stylesSCSS/blocks/_main-page-header-content.scss
@@ -50,7 +50,7 @@
 }
 
 
-@media screen and (min-width: 481px) {
+@media screen and (min-width: $tablet-width) {
   .header-content {
     background-image: url("../../images/back-tablet@1x.jpg");
     background-position: cover;
@@ -98,7 +98,7 @@
     width: 230px;
   }
   .iphone-image {
-    right: 200px;
+    right: 130px;
   }
   .iphone-image--mobile {
     display: none;
