--- a/stylesSCSS/blocks/_contacts.scss
+++ b/stylesSCSS/blocks/_contacts.scss
@@ -3,7 +3,7 @@
   padding-bottom: 38px;
   text-align: center;
 
-  @media screen and (min-width: 481px) {
+  @media screen and (min-width: $tablet-width) {
     padding-top: 46px;
     padding-bottom: 28px;
   }
@@ -22,7 +22,7 @@
   font-weight: 300;
   line-height: 28px;
 
-  @media screen and (min-width: 481px) {
+  @media screen and (min-width: $tablet-width) {
     margin: 0 auto;
     width: 500px;
     font-size: 40px;
@@ -40,7 +40,7 @@
   flex-wrap: wrap;
   justify-content: center;
 
-  @media screen and (min-width: 481px) {
+  @media screen and (min-width: $tablet-width) {
     justify-content: space-around;
     margin-left: -10px;
     margin-right: -10px;
@@ -57,7 +57,7 @@
   margin-bottom: 24px;
   width: 280px;
 
-  @media screen and (min-width: 481px) {
+  @media screen and (min-width: $tablet-width) {
     margin-bottom: 43px;
   }
 
@@ -91,7 +91,7 @@
   font-size: 18px;
   font-weight: 700;
 
-  @media screen and (min-width: 481px) {
+  @media screen and (min-width: $tablet-width) {
     margin-bottom: 6px;
   }
 
@@ -131,11 +131,11 @@
   background-image: url('../../images/icons/triangle-white-contacts-mobile.svg');
   width: 100%;
   height: 200px;
-  background-position: 0 38px;
+  background-position: 0 37px;
   background-repeat: no-repeat;
   position: absolute;
   z-index: 2;
- @media screen and (min-width: 481px) {
+ @media screen and (min-width: $tablet-width) {
   background-position: 0 27px;
  }
  @media screen and (min-width: 1025px) {
