--- a/stylesSCSS/blocks/_download-app.scss
+++ b/stylesSCSS/blocks/_download-app.scss
@@ -37,13 +37,16 @@
     align-items: center;
     justify-content: space-between;
     margin: 2px 37px 28px;
+    margin: 2px auto 28px;
+    max-width: 300px;
   }
   &__text {
     font-size: 14px;
     font-weight: 300;
     line-height: 24px;
     color: $white;
-    margin: 10px 25px; 
+    margin: 10px auto;
+    max-width: 300px;
   }
   &__link {
     display: flex;
@@ -56,7 +59,7 @@
 
 
 
-@media screen and (min-width: 481px) {
+@media screen and (min-width: $tablet-width) {
   .download-app {
     background-color: transparent;
     max-width: 335px;
