--- a/stylesSCSS/blocks/_features.scss
+++ b/stylesSCSS/blocks/_features.scss
@@ -2,16 +2,20 @@
 .features {
   background-image: url("../../images/grey-shape-mobile.svg");
   background-repeat: no-repeat;
-  background-position-y: -55px;
+  background-position-y: -35px;
   text-align: center;
 }
 .features__wrapper {
   padding: 20px;
-  padding-top: 75px;
+  padding-top: 85px;
   background-image: url("../../images/iphone-features-mobile.svg");
   background-position: 50% 97%;
   background-repeat: no-repeat;
   min-height: 828px;
+}
+.features__list {
+  margin: 0 auto;
+  max-width: 400px;
 }
 .features__item-title {
   font-size: 18px;
@@ -30,7 +34,7 @@
 .screen-features-tablet {
   display: none;
 }
-@media screen and (min-width: 481px) {
+@media screen and (min-width: $tablet-width) {
   .features {
     background-image: url("../../images/grey-shape-tablet.svg");
     background-position-y: -7px;
@@ -46,7 +50,7 @@
   }
   .features__list {
     width: 320px;
-    float: right;
+    margin-left: 50%;
   }
   .screen-features-desktop {
     display: none;
@@ -55,6 +59,7 @@
     display: block;
     position: relative;
     left: 13px;
+    top: -368px;
   }
 }
 @media screen and (min-width: 1025px) {
@@ -71,8 +76,10 @@
     display: flex;
     align-items: stretch;
     justify-content: space-around;
-    width: 100%;
+    max-width: 100%;
     height: 400px;
+    margin-left: 0;
+    width: unset;
   }
   .features__item {
     width: 236px;
