--- a/stylesSCSS/blocks/_header-logo.scss
+++ b/stylesSCSS/blocks/_header-logo.scss
@@ -14,7 +14,7 @@
   display: none;
 }
 
-@media screen and (min-width: 481px) {
+@media screen and (min-width: $tablet-width) {
   .logo__image {
     width: 146px;
     height: 40px;
