--- a/stylesSCSS/blocks/_main-page-header.scss
+++ b/stylesSCSS/blocks/_main-page-header.scss
@@ -4,10 +4,14 @@
 .main-page-header__wrapper {
   background-color: #1d263299;
   position: absolute;
+  max-width: 1400px;
   z-index: 1000;
   top: 0;
   left: 0;
   right: 0;
+  @media screen and (min-width: 1400px) {
+    margin: 0 auto;
+  }
 }
 .main-page-header__wrapper--active {
   position: static;
