--- a/stylesSCSS/blocks/_price.scss
+++ b/stylesSCSS/blocks/_price.scss
@@ -2,10 +2,10 @@
   padding-top: 91px;
   padding-bottom: 32px;
   background-image: url("../../images/grey-shape-mobile.svg");
-  background-position: 0 -68px;
+  background-position: 0 -41px;
   background-repeat: no-repeat;
 
-  @media screen and (min-width: 481px) {
+  @media screen and (min-width: $tablet-width) {
     padding-top: 86px;
     padding-bottom: 69px;
     background-image: url("../../images/grey-shape-tablet.svg");
@@ -24,7 +24,7 @@
   overflow: hidden;
   line-height: 30px;
   text-transform: uppercase;
-  @media screen and (min-width: 481px) {
+  @media screen and (min-width: $tablet-width) {
     padding: 0 20px;
   }
   @media screen and (min-width: 1025px) {
@@ -36,7 +36,7 @@
   margin-bottom: 15px;
   display: flex;
 
-  @media screen and (min-width: 481px) {
+  @media screen and (min-width: $tablet-width) {
     display: none;
   }
 }
@@ -48,7 +48,7 @@
   transition: left 0.4s linear;
   margin-top: 50px;
 
-  @media screen and (min-width: 481px) {
+  @media screen and (min-width: $tablet-width) {
     position: static;
     left: auto;
     transform: none;
@@ -61,7 +61,7 @@
   width: 834px;
   border-spacing: 0;
 
-  @media screen and (min-width: 481px) {
+  @media screen and (min-width: $tablet-width) {
     width: 100%;
   }
 }
@@ -75,7 +75,7 @@
   color: $white;
   background-color: $dark-blue;
 
-  @media screen and (min-width: 481px) {
+  @media screen and (min-width: $tablet-width) {
     padding-top: 10px;
     padding-bottom: 8px;
   }
@@ -91,7 +91,7 @@
     border-bottom: 2px solid $lightgray;
     background-color: transparent;
 
-    @media screen and (min-width: 481px) {
+    @media screen and (min-width: $tablet-width) {
       display: table-cell;
     }
   }
@@ -153,7 +153,7 @@
 .table-price__license-type {
   font-weight: bold;
 
-  @media screen and (min-width: 481px) {
+  @media screen and (min-width: $tablet-width) {
     font-size: 16px;
   }
 
@@ -166,7 +166,7 @@
   font-size: 24px;
   font-weight: 300;
 
-  @media screen and (min-width: 481px) {
+  @media screen and (min-width: $tablet-width) {
     font-size: 18px;
   }
 
@@ -181,7 +181,7 @@
   border-bottom: 2px solid $lightgray;
   background-color: $white;
 
-  @media screen and (min-width: 481px) {
+  @media screen and (min-width: $tablet-width) {
     padding: 7px 20px 8px;
     width: 25%;
   }
@@ -194,7 +194,7 @@
     display: none;
     border-left: 2px solid $lightgray;
 
-    @media screen and (min-width: 481px) {
+    @media screen and (min-width: $tablet-width) {
       display: table-cell;
       padding-left: 14px;
       padding-right: 14px;
@@ -215,14 +215,14 @@
   align-items: center;
   justify-content: center;
 
-  @media screen and (min-width: 481px) {
+  @media screen and (min-width: $tablet-width) {
     justify-content: center;
   }
 
   &::before {
     content: attr(data-feature-name);
 
-    @media screen and (min-width: 481px) {
+    @media screen and (min-width: $tablet-width) {
       content: "";
     }
   }
