--- a/stylesSCSS/blocks/_slider-reviews.scss
+++ b/stylesSCSS/blocks/_slider-reviews.scss
@@ -5,7 +5,7 @@
   text-align: center;
   background-color: $white;
 
-  @media screen and (min-width: 481px) {
+  @media screen and (min-width: $tablet-width) {
     top: 0;
   }
 
@@ -29,7 +29,7 @@
   height: 238px;
   line-height: 30px;
 
-  @media screen and (min-width: 481px) {
+  @media screen and (min-width: $tablet-width) {
     height: 187px;
   }
 
@@ -48,7 +48,7 @@
   font-weight: bold;
   color: $black;
 
-  @media screen and (min-width: 481px) {
+  @media screen and (min-width: $tablet-width) {
     order: 0;
     margin-top: 20px;
     margin-bottom: 0;
@@ -65,7 +65,7 @@
 .slider-reviews__author-description {
   display: none;
 
-  @media screen and (min-width: 481px) {
+  @media screen and (min-width: $tablet-width) {
     display: block;
     margin-top: 2px;
     margin-bottom: 2px;
@@ -80,7 +80,7 @@
   margin: 0;
   overflow: hidden;
 
-  @media screen and (min-width: 481px) {
+  @media screen and (min-width: $tablet-width) {
     margin-bottom: 13px;
     font-size: 18px;
   }
@@ -138,7 +138,7 @@
 }
 .slider-reviews__slider-controls {
   margin-top: 40px;
-  margin-bottom: 15px;
+  margin-bottom: -40px;
   display: flex;
   @media screen and (min-width: 1025px) {
     display: none;
