--- a/stylesSCSS/blocks/_features.scss
+++ b/stylesSCSS/blocks/_features.scss
@@ -1,6 +1,6 @@
 
 .features {
-  background-image: url("../../images/grey-shape-mobile.svg");
+  background-image: url("../../imagesmin/grey-shape-mobile.svg");
   background-repeat: no-repeat;
   background-position-y: -35px;
   text-align: center;
@@ -8,7 +8,7 @@
 .features__wrapper {
   padding: 20px;
   padding-top: 85px;
-  background-image: url("../../images/iphone-features-mobile.svg");
+  background-image: url("../../imagesmin/iphone-features-mobile.png");
   background-position: 50% 97%;
   background-repeat: no-repeat;
   min-height: 828px;
@@ -36,7 +36,7 @@
 }
 @media screen and (min-width: $tablet-width) {
   .features {
-    background-image: url("../../images/grey-shape-tablet.svg");
+    background-image: url("../../imagesmin/grey-shape-tablet.svg");
     background-position-y: -7px;
     height: 500px;
     text-align: left;
@@ -44,7 +44,7 @@
   .features__wrapper {
     padding: 20px;
     padding-top: 75px;
-    background-image: url("../../images/iphone-features-tablet.svg");
+    background-image: url("../../imagesmin/iphone-features-tablet.png");
     background-position: 20px 5%;
     background-repeat: no-repeat;
   }
@@ -64,7 +64,7 @@
 }
 @media screen and (min-width: 1025px) {
   .features {
-    background-image: url("../../images/grey-shape-desktop.svg");
+    background-image: url("../../imagesmin/grey-shape-desktop.svg");
     background-position-y: unset;
     height: 700px;
   }
@@ -90,7 +90,7 @@
   .features__item--second,
   .features__item--third 
   {
-    background-image: url("../../images/iphone-features-desktop.svg");
+    background-image: url("../../imagesmin/iphone-features-desktop.png");
     background-repeat: no-repeat;
     background-position-x: 50%;
     min-height: 500px;
