--- a/stylesSCSS/blocks/_map.scss
+++ b/stylesSCSS/blocks/_map.scss
@@ -1,7 +1,7 @@
 .map {
   position: relative;
   z-index: 1;
-  background-image: url('../../images/map-desktop@1x.jpg');
+  background-image: url('../../imagesmin/map-desktop@1x.jpg');
   background-repeat: no-repeat;
   height: 300px;
   background-position-y: -442px;
@@ -9,13 +9,13 @@
   background-size: cover;
 
   @media screen and (min-width: $tablet-width) {
-    background-image: url('../../images/map-tablet@1x.jpg');
+    background-image: url('../../imagesmin/map-tablet@1x.jpg');
     height: 373px;
     background-position-y: -330px;
   }
 
   @media screen and (min-width: 1025px) {
-    background-image: url('../../images/map-desktop@1x.jpg');
+    background-image: url('../../imagesmin/map-desktop@1x.jpg');
     height: 501px;
     background-position-y: -535px;
     background-size: unset;
